--- a/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/LatestUploads/LatestUpladsCard.xib
+++ b/Depo/Depo/Presentation/SubViews/ViewForPopUp/PopUpSubViews/LatestUploads/LatestUpladsCard.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LatestUpladsCard" customModule="lifebox" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LatestUpladsCard" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="226"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -34,17 +32,6 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZGx-fV-qD9">
-                    <rect key="frame" x="342" y="0.0" width="33" height="33"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="33" id="FWk-YC-cd5"/>
-                        <constraint firstAttribute="height" constant="33" id="XHZ-en-7iV"/>
-                    </constraints>
-                    <state key="normal" image="CloseCardIcon"/>
-                    <connections>
-                        <action selector="onCloseButton" destination="iN0-l3-epB" eventType="touchUpInside" id="FIC-zy-J0Y"/>
-                    </connections>
-                </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="nrt-8t-az2">
                     <rect key="frame" x="47" y="85" width="313" height="85"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,14 +56,14 @@
                         <constraint firstAttribute="height" constant="1" id="Vd2-Jt-HE0"/>
                     </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAy-jU-c4N">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jAy-jU-c4N">
                     <rect key="frame" x="16" y="189" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="onViewRecentActivitiesButton" destination="iN0-l3-epB" eventType="touchUpInside" id="fnr-4c-N7V"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ny-KE-Jvv">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ny-KE-Jvv">
                     <rect key="frame" x="87" y="189" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
@@ -88,11 +75,8 @@
             <constraints>
                 <constraint firstItem="3Im-XG-pi5" firstAttribute="top" secondItem="JNP-wR-JQc" secondAttribute="bottom" constant="17" id="0qd-vP-Qnd"/>
                 <constraint firstAttribute="trailing" secondItem="3Im-XG-pi5" secondAttribute="trailing" constant="15" id="E9o-K0-dqC"/>
-                <constraint firstItem="ZGx-fV-qD9" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Gvb-pt-odt"/>
-                <constraint firstAttribute="trailing" secondItem="ZGx-fV-qD9" secondAttribute="trailing" id="HNc-B9-8ej"/>
                 <constraint firstItem="Qor-Oa-tkt" firstAttribute="top" secondItem="JNP-wR-JQc" secondAttribute="bottom" constant="16" id="J6o-nm-pQT"/>
                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="0Ny-KE-Jvv" secondAttribute="trailing" constant="8" id="J9J-lq-eS5"/>
-                <constraint firstItem="ZGx-fV-qD9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="JNP-wR-JQc" secondAttribute="trailing" constant="15" id="JcD-X1-bbU"/>
                 <constraint firstAttribute="bottom" secondItem="jAy-jU-c4N" secondAttribute="bottom" constant="7" id="NTI-hW-x8l"/>
                 <constraint firstAttribute="trailing" secondItem="nrt-8t-az2" secondAttribute="trailing" constant="15" id="NcV-LJ-gC4"/>
                 <constraint firstItem="nrt-8t-az2" firstAttribute="top" secondItem="3Im-XG-pi5" secondAttribute="bottom" constant="11" id="RW5-3q-3l7"/>
@@ -123,7 +107,6 @@
         </view>
     </objects>
     <resources>
-        <image name="CloseCardIcon" width="14" height="14"/>
         <image name="LatestUploadsCardIcon" width="26" height="26"/>
     </resources>
 </document>
