COF-731 Private Share - share button bottom offset

--- a/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/PrivateShareViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PrivateShare/New Share/PrivateShareViewController.xib
@@ -40,11 +40,11 @@
                     </constraints>
                 </scrollView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2mQ-Dg-Efm">
-                    <rect key="frame" x="0.0" y="114" width="414" height="698"/>
+                    <rect key="frame" x="0.0" y="114" width="414" height="664"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ui7-rz-0Ps">
-                    <rect key="frame" x="0.0" y="812" width="414" height="84"/>
+                    <rect key="frame" x="0.0" y="778" width="414" height="118"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r31-rU-1Pz" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="117" y="20" width="180" height="44"/>
@@ -60,9 +60,8 @@
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
-                        <constraint firstItem="r31-rU-1Pz" firstAttribute="centerY" secondItem="ui7-rz-0Ps" secondAttribute="centerY" id="6eu-D9-XZy"/>
                         <constraint firstItem="r31-rU-1Pz" firstAttribute="centerX" secondItem="ui7-rz-0Ps" secondAttribute="centerX" id="fYB-YU-4AK"/>
-                        <constraint firstAttribute="height" constant="84" id="hlr-5C-PvM"/>
+                        <constraint firstItem="r31-rU-1Pz" firstAttribute="top" secondItem="ui7-rz-0Ps" secondAttribute="top" constant="20" id="z1H-5H-RgQ"/>
                     </constraints>
                 </view>
             </subviews>
@@ -72,15 +71,15 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="2mQ-Dg-Efm" secondAttribute="trailing" id="ADc-im-Fxp"/>
                 <constraint firstItem="2mQ-Dg-Efm" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="70" id="BSe-jp-cqI"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="F5Y-cB-Q0t"/>
-                <constraint firstItem="ui7-rz-0Ps" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="Obk-jm-2Q1"/>
+                <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="-84" id="Obk-jm-2Q1"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kEE-p6-0hz" secondAttribute="trailing" id="TUk-Ov-bMj"/>
-                <constraint firstAttribute="bottom" secondItem="ui7-rz-0Ps" secondAttribute="bottom" id="dqH-04-CCH"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="kEE-p6-0hz" secondAttribute="bottom" id="eEQ-CW-4Hs"/>
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="eTY-ha-tW3"/>
                 <constraint firstItem="kEE-p6-0hz" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="f6r-Lt-9Ox"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jY5-oH-u7v"/>
                 <constraint firstItem="2mQ-Dg-Efm" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="jmW-4B-Sxk"/>
                 <constraint firstItem="ui7-rz-0Ps" firstAttribute="top" secondItem="2mQ-Dg-Efm" secondAttribute="bottom" id="mAk-tO-3Pu"/>
+                <constraint firstAttribute="bottom" secondItem="ui7-rz-0Ps" secondAttribute="bottom" id="qkD-CL-3n6"/>
                 <constraint firstItem="fFh-DE-Z2K" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="zoy-ry-Sko"/>
             </constraints>
             <point key="canvasLocation" x="137.68115942028987" y="105.80357142857143"/>
